--- a/DisjointMNIST.ipynb
+++ b/DisjointMNIST.ipynb
@@ -30,6 +30,7 @@
    },
    "outputs": [],
    "source": [
+    "#Activation function and its derivative\n",
     "def sigma(x):\n",
     "    return tf.div(tf.constant(1.0),\n",
     "                  tf.add(tf.constant(1.0), tf.exp(tf.negative(x))))\n",
@@ -91,6 +92,7 @@
    },
    "outputs": [],
    "source": [
+    "#Create 2 disjoint MNIST datasets\n",
     "dataset04 = split_mnist(mnist, lambda x: x < 5)\n",
     "dataset59 = split_mnist(mnist, lambda x: (4 < x) & (x < 10))\n",
     "mnist_list = [dataset04, dataset59]"
@@ -104,6 +106,7 @@
    },
    "outputs": [],
    "source": [
+    "#Define a 2 layer feedfoward network with 800 hidden neurons \n",
     "a_0 = tf.placeholder(tf.float32, [None, 784])\n",
     "y = tf.placeholder(tf.float32, [None, 10])\n",
     "\n",
@@ -115,10 +118,12 @@
     "w_old_1 = tf.Variable(tf.zeros([785, middle]))\n",
     "w_old_2 = tf.Variable(tf.zeros([middle+1, 10]))\n",
     "\n",
+    "#Conceptors for free spaces\n",
     "F_0 = tf.Variable(tf.eye(785))\n",
     "F_1 = tf.Variable(tf.eye(middle+1))\n",
     "\n",
     "\n",
+    "#Forward Pass, ab_i is the state vector together with bias\n",
     "ab_0 = tf.concat([a_0, tf.tile(tf.ones([1,1]), [tf.shape(a_0)[0], 1])], 1)\n",
     "z_1 = tf.matmul(ab_0, w_1)\n",
     "a_1 = sigma(z_1)\n",
@@ -129,7 +134,7 @@
     "\n",
     "diff = tf.subtract(a_2, y)\n",
     "\n",
-    "\n",
+    "#Backward Pass\n",
     "reg2 = tf.Variable(0.005)\n",
     "reg1 = tf.Variable(0.005)\n",
     "\n",
@@ -160,6 +165,7 @@
    },
    "outputs": [],
    "source": [
+    "#Update the weights\n",
     "eta = tf.constant(0.1)\n",
     "step = [\n",
     "    tf.assign(w_1,\n",
@@ -169,6 +175,7 @@
     "            tf.subtract(w_2, tf.multiply(eta, d_w_2)))\n",
     "]\n",
     "\n",
+    "#Compute Classification Accuracy\n",
     "acct_mat = tf.equal(tf.argmax(a_2, 1), tf.argmax(y, 1))\n",
     "acct_res = tf.reduce_sum(tf.cast(acct_mat, tf.float32))"
    ]
@@ -187,6 +194,7 @@
     "sess = tf.InteractiveSession(config=config)\n",
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
+    "#Conceptors for used spaces\n",
     "A_0 = np.zeros([785, 785])\n",
     "A_1 = np.zeros([middle+1, middle+1])"
    ]
@@ -195,7 +203,8 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -362,15 +371,18 @@
     }
    ],
    "source": [
+    "#Iterate over 2 tasks\n",
     "task_num = 2\n",
     "for j in xrange(task_num):\n",
     "    print \"Training Disjoint MNIST %d\" % (j+1)\n",
     "\n",
+    "    #Update the parameters for 10000 times\n",
     "    for i in xrange(10000):\n",
     "        batch_xs, batch_ys = mnist_list[j].train.next_batch(300)\n",
     "\n",
     "        sess.run(step, feed_dict = {a_0: batch_xs, y: batch_ys})\n",
     "\n",
+    "        #Print validation accuracy every 1000 steps \n",
     "        if i % 1000 == 0:\n",
     "            res = sess.run(acct_res, feed_dict =\n",
     "                           {a_0:mnist_list[j].validation.images[:1000],\n",
@@ -384,7 +396,7 @@
     "    updateW_old = [tf.assign(w_old_1, w_1), tf.assign(w_old_2, w_2)]\n",
     "    sess.run(updateW_old)\n",
     "\n",
-    "\n",
+    "    #Print the accuracies on testing set of the task just trained on\n",
     "    res = sess.run(acct_res, feed_dict =\n",
     "                           {a_0: mnist_list[j].test.images[:],\n",
     "                            y : mnist_list[j].test.labels[:]})\n",
@@ -397,7 +409,8 @@
     "                               {a_0: mnist_list[i].test.images[:],\n",
     "                                y : mnist_list[i].test.labels[:]})\n",
     "        print res/mnist_list[i].test.labels.shape[0]\n",
-    "\n",
+    "        \n",
+    "    #Collecting activation vectors to compute conceptors on the input layer\n",
     "    a0_collection, _ = mnist_list[j].train.next_batch(1000)\n",
     "    ab0_collection = sess.run(ab_0, feed_dict = {a_0: a0_collection})\n",
     "\n",
@@ -416,7 +429,7 @@
     "    print \"C0\"\n",
     "    plt.show()\n",
     "\n",
-    "\n",
+    "    #Collecting activation vectors to compute conceptors on the hidden layer\n",
     "    ab1_collection = sess.run(ab_1, feed_dict = {a_0: a0_collection})\n",
     "\n",
     "    alpha1 = 9\n",
@@ -435,7 +448,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "\n",
+    "    #Update the conceptors for used spaces on each layer\n",
     "    A_0 = logic.OR(C0, A_0)\n",
     "    A_1 = logic.OR(C1, A_1)\n",
     "    U_A0, S_A0, _ = np.linalg.svd(A_0)\n",
@@ -445,7 +458,8 @@
     "    plt.plot(x1,S_A1)\n",
     "    print \"A\"\n",
     "    plt.show()\n",
-    "\n",
+    "    \n",
+    "    #Update the conceptors for free space on each layer\n",
     "    F0 = logic.NOT(A_0)\n",
     "    F1 = logic.NOT(A_1)\n",
     "\n",
