--- a/DisjointMNIST.ipynb
+++ b/DisjointMNIST.ipynb
@@ -474,6 +474,7 @@
     "    updateF = [tf.assign(F_0, tf.cast(F0, tf.float32)), tf.assign(F_1, tf.cast(F1, tf.float32))]\n",
     "    sess.run(updateF)\n",
     "\n",
+    "#Print the final test accuracy on the entire MNIST\n",
     "res = sess.run(acct_res, feed_dict =\n",
     "                   {a_0: mnist.test.images[:],\n",
     "                    y : mnist.test.labels[:]})\n",
